Completed data splitting

--- a/notebooks/TomatoLeafDisease.ipynb
+++ b/notebooks/TomatoLeafDisease.ipynb
@@ -45,15 +45,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ignore TensorFlow CUDA related warnings\n",
+    "# Ignore warnings\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore', category=DeprecationWarning)\n",
-    "warnings.filterwarnings('ignore', category=FutureWarning)\n",
-    "warnings.filterwarnings('ignore', category=UserWarning)\n",
+    "warnings.filterwarnings('ignore')\n",
     "\n",
     "# General libraries\n",
     "import os\n",
@@ -88,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,8 +103,7 @@
     "# Constants\n",
     "BATCH_SIZE = 32\n",
     "IMG_HEIGHT = 180\n",
-    "IMG_WIDTH = 180\n",
-    "AUTOTUNE = tf.data.AUTOTUNE"
+    "IMG_WIDTH = 180\n"
    ]
   },
   {
@@ -119,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -311,46 +308,190 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### We are going to split the data into the following 3 subsets:\n",
+    "- ### Training\n",
+    "- ### Validation\n",
+    "- ### Testing\n",
+    "\n",
+    "Please note that we already took care of separating training (80%) and testing (20%) data when we dowloaded the kaggle dataset and created the folder structure. However, we still need to load both subsets into our Notebook, as well as splitting off the validation from our training set."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 2879 files belonging to 3 classes.\n",
+      "Using 2304 files for training.\n",
+      "Using 575 files for validation.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load and further split train_split into train and validation\n",
+    "train_data, val_data = tf.keras.preprocessing.image_dataset_from_directory(\n",
+    "    TRAIN_PATH,\n",
+    "    validation_split=0.2,\n",
+    "    subset=\"both\",\n",
+    "    seed=21,\n",
+    "    image_size= (IMG_HEIGHT, IMG_WIDTH),\n",
+    "    batch_size= BATCH_SIZE\n",
+    ")\n",
+    "\n",
+    "class_names = train_data.class_names"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 721 files belonging to 3 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load testing data\n",
+    "test_data = tf.keras.preprocessing.image_dataset_from_directory(\n",
+    "    TEST_PATH,\n",
+    "    image_size=(IMG_HEIGHT, IMG_WIDTH),\n",
+    "    batch_size=BATCH_SIZE\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Let's check if the numbers are still adding up to the previous total of 3600 images!"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def images_per_split(data) -> dict:\n",
+    "    classes = {\n",
+    "        'early_blight': 0,\n",
+    "        'healthy': 0,\n",
+    "        'late_blight': 0\n",
+    "    }\n",
+    "\n",
+    "    for i in data:\n",
+    "        for j in i[1]:\n",
+    "            if j == 0:\n",
+    "                classes['early_blight'] += 1\n",
+    "            elif j == 1:\n",
+    "                classes['healthy'] += 1\n",
+    "            else:\n",
+    "                classes['late_blight'] += 1\n",
+    "\n",
+    "    return classes\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>train</th>\n",
+       "      <th>val</th>\n",
+       "      <th>test</th>\n",
+       "      <th>total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>early_blight</th>\n",
+       "      <td>502</td>\n",
+       "      <td>138</td>\n",
+       "      <td>160</td>\n",
+       "      <td>800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>healthy</th>\n",
+       "      <td>823</td>\n",
+       "      <td>195</td>\n",
+       "      <td>255</td>\n",
+       "      <td>1273</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>late_blight</th>\n",
+       "      <td>979</td>\n",
+       "      <td>242</td>\n",
+       "      <td>306</td>\n",
+       "      <td>1527</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>total</th>\n",
+       "      <td>2304</td>\n",
+       "      <td>575</td>\n",
+       "      <td>721</td>\n",
+       "      <td>3600</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              train  val  test  total\n",
+       "early_blight    502  138   160    800\n",
+       "healthy         823  195   255   1273\n",
+       "late_blight     979  242   306   1527\n",
+       "total          2304  575   721   3600"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_splits = {\n",
+    "    'train': images_per_split(train_data),\n",
+    "    'val': images_per_split(val_data),\n",
+    "    'test': images_per_split(test_data)\n",
+    "}\n",
+    "\n",
+    "data_splits_df = pd.DataFrame(data_splits)\n",
+    "data_splits_df['total'] = data_splits_df.sum(axis=1)\n",
+    "data_splits_df.loc['total'] = data_splits_df.sum()\n",
+    "data_splits_df"
+   ]
   }
  ],
  "metadata": {
