Completed data preprocessing

--- a/notebooks/TomatoLeafDisease.ipynb
+++ b/notebooks/TomatoLeafDisease.ipynb
@@ -4,8 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 🍅 **Tomato Leaf Disease** #\n",
-    "\n",
+    "# 🍅 **Tomato Leaf Disease** #"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 🎯 Project Description  ###\n",
     "Tomatoes are one of the most extensively grown vegetables in any country, and their diseases can significantly affect yield and quality. Accurate and early detection of tomato diseases is crucial for reducing losses and improving crop management.\n",
     "\n",
@@ -45,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,9 +121,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Dataset already downloaded!\n"
+     ]
+    }
+   ],
    "source": [
     "# Create Data folder structure\n",
     "if not os.path.exists(MAIN_PATH):\n",
@@ -129,12 +142,15 @@
     "            os.makedirs(path, exist_ok=True)\n",
     "\n",
     "    # Instantiate Kaggle API (requires local API Key)\n",
+    "    print('Authenticating...', end=' ')\n",
     "    api = KaggleApi()\n",
     "    api.authenticate()\n",
     "\n",
-    "    # Download the dataset to the local folder\n",
+    "    # Download the dataset to the local folder and unzip\n",
+    "    print('Downloading...', end=' ')\n",
     "    api.dataset_download_files(KAGGLE_DATASET, path=MAIN_PATH, unzip=True)\n",
     "\n",
+    "    print('Unzipping...', end=' ')\n",
     "    for folder in os.listdir(PLANTVILLAGE):\n",
     "        if folder == 'Tomato___healthy' or folder == 'Tomato___Early_blight' or folder == 'Tomato___Late_blight':\n",
     "            source_path = os.path.join(PLANTVILLAGE, folder)\n",
@@ -149,45 +165,49 @@
     "\n",
     "    shutil.rmtree(PLANTVILLAGE)\n",
     "\n",
-    "# Define split ratio of 80% train and 20% test\n",
-    "split_ratio = 0.8\n",
+    "    # Define split ratio of 80% train and 20% test\n",
+    "    print('Splitting...')\n",
+    "    split_ratio = 0.8\n",
     "\n",
-    "for class_folder in os.listdir(RAW_PATH):\n",
-    "    class_path = os.path.join(RAW_PATH, class_folder)\n",
-    "    if os.path.isdir(class_path):\n",
-    "        files = os.listdir(class_path)\n",
-    "        random.shuffle(files)\n",
+    "    for class_folder in os.listdir(RAW_PATH):\n",
+    "        class_path = os.path.join(RAW_PATH, class_folder)\n",
+    "        if os.path.isdir(class_path):\n",
+    "            files = os.listdir(class_path)\n",
+    "            random.shuffle(files)\n",
     "\n",
-    "        # Separating raw data into train and test splits\n",
-    "        split_index = int(len(files) * split_ratio)\n",
-    "        train_files = files[:split_index]\n",
-    "        test_files = files[split_index:]\n",
+    "            # Separating raw data into train and test splits\n",
+    "            split_index = int(len(files) * split_ratio)\n",
+    "            train_files = files[:split_index]\n",
+    "            test_files = files[split_index:]\n",
     "\n",
-    "        # Creating folders for each class of the train split\n",
-    "        dest_train_folder = os.path.join(TRAIN_PATH, class_folder)\n",
-    "        if not os.path.exists(dest_train_folder):\n",
-    "            os.makedirs(dest_train_folder, exist_ok=True)\n",
-    "        else:\n",
-    "            continue\n",
+    "            # Creating folders for each class of the train split\n",
+    "            dest_train_folder = os.path.join(TRAIN_PATH, class_folder)\n",
+    "            if not os.path.exists(dest_train_folder):\n",
+    "                os.makedirs(dest_train_folder, exist_ok=True)\n",
+    "            else:\n",
+    "                continue\n",
     "\n",
-    "        # Creating folders for each class of the test split\n",
-    "        dest_test_folder = os.path.join(TEST_PATH, class_folder)\n",
-    "        if not os.path.exists(dest_test_folder):\n",
-    "            os.makedirs(dest_test_folder, exist_ok=True)\n",
-    "        else:\n",
-    "            continue\n",
+    "            # Creating folders for each class of the test split\n",
+    "            dest_test_folder = os.path.join(TEST_PATH, class_folder)\n",
+    "            if not os.path.exists(dest_test_folder):\n",
+    "                os.makedirs(dest_test_folder, exist_ok=True)\n",
+    "            else:\n",
+    "                continue\n",
     "\n",
-    "        # Move train split files to train folder\n",
-    "        for file in train_files:\n",
-    "            source_file = os.path.join(class_path, file)\n",
-    "            dest_file = os.path.join(dest_train_folder, file)\n",
-    "            shutil.copy(source_file, dest_file)\n",
+    "            # Move train split files to train folder\n",
+    "            for file in train_files:\n",
+    "                source_file = os.path.join(class_path, file)\n",
+    "                dest_file = os.path.join(dest_train_folder, file)\n",
+    "                shutil.copy(source_file, dest_file)\n",
     "\n",
-    "        # Move test split files to test folder\n",
-    "        for file in test_files:\n",
-    "            source_file = os.path.join(class_path, file)\n",
-    "            dest_file = os.path.join(dest_test_folder, file)\n",
-    "            shutil.copy(source_file, dest_file)"
+    "            # Move test split files to test folder\n",
+    "            for file in test_files:\n",
+    "                source_file = os.path.join(class_path, file)\n",
+    "                dest_file = os.path.join(dest_test_folder, file)\n",
+    "                shutil.copy(source_file, dest_file)\n",
+    "    print('✅ Dataset successfully downloaded!')\n",
+    "else:\n",
+    "    print('✅ Dataset already downloaded!')"
    ]
   },
   {
@@ -206,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -312,16 +332,16 @@
    "metadata": {},
    "source": [
     "### We are going to split the data into the following 3 subsets:\n",
-    "- ### Training\n",
-    "- ### Validation\n",
-    "- ### Testing\n",
+    "- Training\n",
+    "- Validation\n",
+    "- Testing\n",
     "\n",
     "Please note that we already took care of separating training (80%) and testing (20%) data when we dowloaded the kaggle dataset and created the folder structure. However, we still need to load both subsets into our Notebook, as well as splitting off the validation from our training set."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +495,7 @@
        "total          2304  575   721   3600"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,6 +512,146 @@
     "data_splits_df.loc['total'] = data_splits_df.sum()\n",
     "data_splits_df"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. 🧹 Data Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### To ensure all our images are compatible with Neural Networks, we will perform some data cleaning and preprocessing.\n",
+    "- Applying several data pipeline optimizations using TensorFlow's tf.data API to improve performance during training and evaluation later on.\n",
+    "- The pixel values for all 3 RGB (red, green, blue) channels are between 0 and 255. We can normalize these values to be between 0 and 1 by using a rescaling layer to increase model performance and stability, as seen in the model building step below. However, we are doing this step here as well to gain access to the input shape of the images."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "autotune = tf.data.AUTOTUNE\n",
+    "\n",
+    "train_data = train_data.cache().shuffle(1000).prefetch(buffer_size=autotune)\n",
+    "val_data = val_data.cache().prefetch(buffer_size=autotune)\n",
+    "test_data = test_data.cache().prefetch(buffer_size=autotune)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image: [[[0.5871465  0.58322495 0.6028328 ]\n",
+      "  [0.54927385 0.5453523  0.5649601 ]\n",
+      "  [0.571329   0.5674074  0.5870153 ]\n",
+      "  ...\n",
+      "  [0.50841206 0.50056887 0.52017677]\n",
+      "  [0.5114627  0.50361955 0.5232274 ]\n",
+      "  [0.518475   0.51063186 0.5302397 ]]\n",
+      "\n",
+      " [[0.5686449  0.5647233  0.58433115]\n",
+      "  [0.561085   0.5571634  0.57677126]\n",
+      "  [0.5587655  0.5548439  0.57445174]\n",
+      "  ...\n",
+      "  [0.5228322  0.5149891  0.5345969 ]\n",
+      "  [0.5231416  0.5152985  0.5349063 ]\n",
+      "  [0.52074367 0.51290053 0.5325084 ]]\n",
+      "\n",
+      " [[0.5616412  0.55771965 0.5773275 ]\n",
+      "  [0.59700805 0.5930865  0.6126943 ]\n",
+      "  [0.57971436 0.5757928  0.59540063]\n",
+      "  ...\n",
+      "  [0.52156866 0.5137255  0.53333336]\n",
+      "  [0.51455337 0.50671023 0.5263181 ]\n",
+      "  [0.50632054 0.49847737 0.51808524]]\n",
+      "\n",
+      " ...\n",
+      "\n",
+      " [[0.47529173 0.47137016 0.45176232]\n",
+      "  [0.48042136 0.4764998  0.45689195]\n",
+      "  [0.4688576  0.46493602 0.44532818]\n",
+      "  ...\n",
+      "  [0.3941051  0.39018354 0.37449726]\n",
+      "  [0.42818418 0.4242626  0.40857634]\n",
+      "  [0.41599077 0.4120692  0.3963829 ]]\n",
+      "\n",
+      " [[0.45791286 0.4539913  0.43438345]\n",
+      "  [0.45335072 0.44942915 0.4298213 ]\n",
+      "  [0.45421928 0.4502977  0.43068987]\n",
+      "  ...\n",
+      "  [0.39891776 0.3949962  0.37930992]\n",
+      "  [0.4266624  0.42274082 0.40705454]\n",
+      "  [0.40474927 0.4008277  0.38514143]]\n",
+      "\n",
+      " [[0.46366164 0.45974007 0.44013223]\n",
+      "  [0.43177047 0.4278489  0.40824106]\n",
+      "  [0.4249164  0.42099482 0.40138698]\n",
+      "  ...\n",
+      "  [0.42108923 0.41716766 0.4014814 ]\n",
+      "  [0.44806114 0.44413957 0.4284533 ]\n",
+      "  [0.42457506 0.4206535  0.40496722]]] \n",
+      "\n",
+      "Lables: [0 2 2 1 1 2 2 2 2 2 1 2 1 2 1 1 1 2 2 0 2 1 2 2 1 0 1 2 2 1 2 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "normalization_layer = keras.layers.Rescaling(1./255)\n",
+    "\n",
+    "norm_train_data = train_data.map(lambda x, y: (normalization_layer(x), y))\n",
+    "image_batch, labels_batch = next(iter(norm_train_data))\n",
+    "\n",
+    "print(f'Image: {image_batch[0].numpy()}', '\\n')\n",
+    "print(f'Lables: {labels_batch}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of an image batch: (32, 180, 180, 3)\n",
+      "Batch Size:   32\n",
+      "Image Height: 180\n",
+      "Image Width:  180\n",
+      "Channels:     3 \n",
+      "\n",
+      "Input Shape:  (180, 180, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Shape of an image batch:', image_batch.shape)\n",
+    "print('Batch Size:  ', image_batch.shape[0])\n",
+    "print('Image Height:', image_batch.shape[1])\n",
+    "print('Image Width: ', image_batch.shape[2])\n",
+    "print('Channels:    ', image_batch.shape[3], '\\n')\n",
+    "\n",
+    "# Required input shape\n",
+    "input_shape = image_batch.shape[1:]\n",
+    "print('Input Shape: ', input_shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
