--- a/notebooks/TomatoLeafDisease.ipynb
+++ b/notebooks/TomatoLeafDisease.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,6 +76,7 @@
     "# Machine Learning libraries\n",
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
+    "from keras import models, layers\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense, Conv2D, MaxPooling2D, Flatten, Dropout\n",
     "from keras.callbacks import EarlyStopping\n",
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -351,6 +352,17 @@
       "Found 2879 files belonging to 3 classes.\n",
       "Using 2304 files for training.\n",
       "Using 575 files for validation.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-12-30 11:06:41.298932: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
+      "2023-12-30 11:06:41.300351: W tensorflow/stream_executor/cuda/cuda_driver.cc:263] failed call to cuInit: UNKNOWN ERROR (303)\n",
+      "2023-12-30 11:06:41.300430: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (JarisLaptop): /proc/driver/nvidia/version does not exist\n",
+      "2023-12-30 11:06:41.307840: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX_VNNI FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
    ],
@@ -370,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +507,7 @@
        "total          2304  575   721   3600"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,69 +556,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Image: [[[0.5871465  0.58322495 0.6028328 ]\n",
-      "  [0.54927385 0.5453523  0.5649601 ]\n",
-      "  [0.571329   0.5674074  0.5870153 ]\n",
+      "Image: [[[0.56030315 0.56030315 0.5681463 ]\n",
+      "  [0.561085   0.561085   0.5689281 ]\n",
+      "  [0.56732994 0.56732994 0.5751731 ]\n",
       "  ...\n",
-      "  [0.50841206 0.50056887 0.52017677]\n",
-      "  [0.5114627  0.50361955 0.5232274 ]\n",
-      "  [0.518475   0.51063186 0.5302397 ]]\n",
+      "  [0.4348967  0.4348967  0.44273984]\n",
+      "  [0.3899317  0.3899317  0.39777485]\n",
+      "  [0.3649668  0.3649668  0.37280995]]\n",
       "\n",
-      " [[0.5686449  0.5647233  0.58433115]\n",
-      "  [0.561085   0.5571634  0.57677126]\n",
-      "  [0.5587655  0.5548439  0.57445174]\n",
+      " [[0.57602906 0.57602906 0.5838722 ]\n",
+      "  [0.5501874  0.5501874  0.55803055]\n",
+      "  [0.56037045 0.56037045 0.5682136 ]\n",
       "  ...\n",
-      "  [0.5228322  0.5149891  0.5345969 ]\n",
-      "  [0.5231416  0.5152985  0.5349063 ]\n",
-      "  [0.52074367 0.51290053 0.5325084 ]]\n",
+      "  [0.43798083 0.43798083 0.44582397]\n",
+      "  [0.4122745  0.4122745  0.42011765]\n",
+      "  [0.40230647 0.40230647 0.4101496 ]]\n",
       "\n",
-      " [[0.5616412  0.55771965 0.5773275 ]\n",
-      "  [0.59700805 0.5930865  0.6126943 ]\n",
-      "  [0.57971436 0.5757928  0.59540063]\n",
+      " [[0.56005085 0.56005085 0.567894  ]\n",
+      "  [0.53819907 0.53819907 0.5460422 ]\n",
+      "  [0.5498427  0.5498427  0.55768585]\n",
       "  ...\n",
-      "  [0.52156866 0.5137255  0.53333336]\n",
-      "  [0.51455337 0.50671023 0.5263181 ]\n",
-      "  [0.50632054 0.49847737 0.51808524]]\n",
+      "  [0.4285401  0.4285401  0.43638325]\n",
+      "  [0.41982573 0.41982573 0.42766887]\n",
+      "  [0.4199976  0.4199976  0.42784074]]\n",
       "\n",
       " ...\n",
       "\n",
-      " [[0.47529173 0.47137016 0.45176232]\n",
-      "  [0.48042136 0.4764998  0.45689195]\n",
-      "  [0.4688576  0.46493602 0.44532818]\n",
+      " [[0.2687607  0.30405483 0.29229012]\n",
+      "  [0.28304297 0.31833708 0.30657238]\n",
+      "  [0.27822572 0.31351984 0.30175513]\n",
       "  ...\n",
-      "  [0.3941051  0.39018354 0.37449726]\n",
-      "  [0.42818418 0.4242626  0.40857634]\n",
-      "  [0.41599077 0.4120692  0.3963829 ]]\n",
+      "  [0.36537144 0.36537144 0.37321457]\n",
+      "  [0.3750327  0.3750327  0.38287583]\n",
+      "  [0.3601742  0.3601742  0.36801735]]\n",
       "\n",
-      " [[0.45791286 0.4539913  0.43438345]\n",
-      "  [0.45335072 0.44942915 0.4298213 ]\n",
-      "  [0.45421928 0.4502977  0.43068987]\n",
+      " [[0.28575313 0.32104725 0.30928254]\n",
+      "  [0.2969935  0.3322876  0.3205229 ]\n",
+      "  [0.28928834 0.32458246 0.31281775]\n",
       "  ...\n",
-      "  [0.39891776 0.3949962  0.37930992]\n",
-      "  [0.4266624  0.42274082 0.40705454]\n",
-      "  [0.40474927 0.4008277  0.38514143]]\n",
+      "  [0.3676616  0.3676616  0.37550473]\n",
+      "  [0.37934643 0.37934643 0.38718957]\n",
+      "  [0.36893097 0.36893097 0.3767741 ]]\n",
       "\n",
-      " [[0.46366164 0.45974007 0.44013223]\n",
-      "  [0.43177047 0.4278489  0.40824106]\n",
-      "  [0.4249164  0.42099482 0.40138698]\n",
+      " [[0.29577345 0.33106756 0.31930286]\n",
+      "  [0.30505452 0.34034863 0.32858393]\n",
+      "  [0.29411766 0.32941177 0.31764707]\n",
       "  ...\n",
-      "  [0.42108923 0.41716766 0.4014814 ]\n",
-      "  [0.44806114 0.44413957 0.4284533 ]\n",
-      "  [0.42457506 0.4206535  0.40496722]]] \n",
+      "  [0.38204798 0.38204798 0.38989112]\n",
+      "  [0.3893668  0.3893668  0.39720994]\n",
+      "  [0.37747324 0.37747324 0.38531637]]] \n",
       "\n",
-      "Lables: [0 2 2 1 1 2 2 2 2 2 1 2 1 2 1 1 1 2 2 0 2 1 2 2 1 0 1 2 2 1 2 1]\n"
+      "Lables: [2 2 0 2 0 1 2 1 2 1 1 1 2 2 1 1 2 2 2 2 2 2 2 1 2 2 2 1 2 1 2 2]\n"
      ]
     }
    ],
    "source": [
-    "normalization_layer = keras.layers.Rescaling(1./255)\n",
+    "normalization_layer = layers.Rescaling(1./255)\n",
     "\n",
     "norm_train_data = train_data.map(lambda x, y: (normalization_layer(x), y))\n",
     "image_batch, labels_batch = next(iter(norm_train_data))\n",
@@ -617,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -644,6 +656,127 @@
     "# Required input shape\n",
     "input_shape = image_batch.shape[1:]\n",
     "print('Input Shape: ', input_shape)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. 🛠️ Model Building"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### We are initializing a sequential model and add several layers to it:\n",
+    "- **Rescaling layer:**       Normalizes pixel values to [0, 1] range for preprocessing.\n",
+    "- **Convolutional layers:**  Applies 32 or 64 convolutional filters of size 3x3 for feature extraction.\n",
+    "- **Max Pooling layers:**    Reduces spatial dimensions by taking maximum value in each 2x2 region.\n",
+    "- **Flatten Layer:**         Flattens the output into a vector for dense layers.\n",
+    "- **Dense Layer (ReLU):**    Fully connected layer with ReLU activation for learning high-level features.\n",
+    "- **Dense Layer (Softmax):** Final output layer using softmax activation for multi-class classification.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = models.Sequential()\n",
+    "\n",
+    "model.add(layers.Rescaling(1./255, input_shape = image_batch.shape[1:]))\n",
+    "\n",
+    "model.add(layers.Conv2D(32, (3, 3), padding='same', activation='relu'))\n",
+    "model.add(layers.MaxPooling2D(2, 2))\n",
+    "\n",
+    "model.add(layers.Conv2D(64, (3, 3), padding='same', activation='relu'))\n",
+    "model.add(layers.MaxPooling2D(2, 2))\n",
+    "\n",
+    "model.add(layers.Conv2D(64, (3, 3), padding='same', activation='relu'))\n",
+    "model.add(layers.MaxPooling2D(2, 2))\n",
+    "\n",
+    "model.add(layers.Conv2D(32, (3, 3), padding='same', activation='relu'))\n",
+    "model.add(layers.MaxPooling2D(2, 2))\n",
+    "\n",
+    "model.add(layers.Flatten())\n",
+    "\n",
+    "model.add(layers.Dense(64, activation='relu'))\n",
+    "model.add(layers.Dense(3, activation='softmax'))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Let's compile the model and define early stopping conditions for the training."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer = 'adam',\n",
+    "                loss = 'sparse_categorical_crossentropy',\n",
+    "                metrics = ['accuracy'])\n",
+    "\n",
+    "early_stopping = EarlyStopping(patience=10, restore_best_weights=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " rescaling_2 (Rescaling)     (None, 180, 180, 3)       0         \n",
+      "                                                                 \n",
+      " conv2d (Conv2D)             (None, 180, 180, 32)      896       \n",
+      "                                                                 \n",
+      " max_pooling2d (MaxPooling2D  (None, 90, 90, 32)       0         \n",
+      " )                                                               \n",
+      "                                                                 \n",
+      " conv2d_1 (Conv2D)           (None, 90, 90, 64)        18496     \n",
+      "                                                                 \n",
+      " max_pooling2d_1 (MaxPooling  (None, 45, 45, 64)       0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " conv2d_2 (Conv2D)           (None, 45, 45, 64)        36928     \n",
+      "                                                                 \n",
+      " max_pooling2d_2 (MaxPooling  (None, 22, 22, 64)       0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " conv2d_3 (Conv2D)           (None, 22, 22, 32)        18464     \n",
+      "                                                                 \n",
+      " max_pooling2d_3 (MaxPooling  (None, 11, 11, 32)       0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " flatten (Flatten)           (None, 3872)              0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 64)                247872    \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 3)                 195       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 322,851\n",
+      "Trainable params: 322,851\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
    ]
   },
   {
