Saved final model loacally

--- a/notebooks/TomatoLeafDisease.ipynb
+++ b/notebooks/TomatoLeafDisease.ipynb
@@ -1346,6 +1346,65 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(aug_test_accuracy[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 4 of 4). These functions will not be directly callable after loading.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: /home/jarisfenner/code/Kaaykun/TomatoLeafDisease/models/model_2024-01-03_17-35-19/assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: /home/jarisfenner/code/Kaaykun/TomatoLeafDisease/models/model_2024-01-03_17-35-19/assets\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Model saved locally\n"
+     ]
+    }
+   ],
+   "source": [
+    "final_model = model if test_accuracy[1] > aug_test_accuracy[1] else aug_model\n",
+    "save_model(final_model)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
