Completed FastAPI main.py

--- a/notebooks/TomatoLeafDisease.ipynb
+++ b/notebooks/TomatoLeafDisease.ipynb
@@ -31,7 +31,7 @@
     "- 📈 Model Training - Train model on the dataset, and use a separate validation set to monitor its performance.\n",
     "- 📊 Model Evaluation - Evaluate the model's performance on a separate test set.\n",
     "- 🔝 Model Improvement - Try different strategies to improve the model's performance.\n",
-    "- 🖼️ Result Visualization $ Interpretation - Visualize the results."
+    "- 🖼️ Result Visualization & Interpretation - Visualize the results."
    ]
   },
   {
@@ -70,7 +70,6 @@
     "\n",
     "# Data Analysis libraries\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.image as mpimg\n",
     "import seaborn as sns\n",
     "from PIL import Image\n",
     "\n",
@@ -78,8 +77,6 @@
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "from keras import models, layers\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Dense, Conv2D, MaxPooling2D, Flatten, Dropout\n",
     "from keras.callbacks import EarlyStopping\n",
     "from keras.preprocessing.image import ImageDataGenerator"
    ]
@@ -724,7 +721,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model, early_stopping =initialize_model()"
+    "model, early_stopping = initialize_model()"
    ]
   },
   {
@@ -1462,11 +1459,6 @@
    "source": [
     "### With that being said, our model seems to be detecting the 3 classes Healthy, Early Blight and Late Blight with very high confidence and accuracy. I am therefore quiet certain that it has not been overfitted and generalizes unseen data quiet well!"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
